пост «моя история»

--- a/_posts/2015-05-21-my-story.md
+++ b/_posts/2015-05-21-my-story.md
@@ -13,6 +13,8 @@ title: Моя история
 
 И вот, я стою на весах перед зеркалом. На меня смотрят 99 килограмм чистого отборного жира на щеках, боках и бёдрах. Кости, мясо и внутренности — не в счёт.
 
+Совсем недавно я расстался с девушкой, с которой был вместе очень долго. Я отчётливо понимал, что с такими формами новая мне не светит. Наверное, я останусь один.
+
 Мне стало страшно. Самым страшным для меня было увидеть самую-самую-страшную цифру: 100. На весах не было десятичных долей, поэтому я стоял и боялся пошевелиться, чтобы случайно не надавить на весы чуть сильнее. «Человек-центнер» — пронеслось у меня в голове.
 
 ## Трансформация
